...
                        />
                    )}
                    {/* Input field */}
                    <View style={[styles.inputContainer, props.minHeight ? { minHeight: props.minHeight } : undefined]}>
                        <MultiTextInput
                            ref={inputRef}
                            testID="lyntty-session-input"
                            accessibilityLabel={t('appWide.lynttySessionMessageInput')}
                            defaultValue={props.initialValue}
                            paddingTop={8}
                            paddingBottom={8}
                            onChangeText={handleTextChange}
                            placeholder={props.placeholder}
...
                                        (hasText || hasImages || props.isSending)
                                            ? styles.sendButtonActive
                                            : styles.sendButtonInactive
                                    ]}
                                >
                                    <Pressable
                                        testID="lyntty-session-send"
                                        accessibilityLabel={t('appWide.sendMessage')}
                                        style={(p) => ({
                                            width: '100%',
                                            height: '100%',
                                            alignItems: 'center',
                                            justifyContent: 'center',
...
