...
                        <View style={styles.contentContainer}>
                            {setupRequired && (
                                <Text style={styles.setupText}>{t('server.previewSetupDescription')}</Text>
                            )}
                            <Text style={styles.labelText}>{t('server.customServerUrlLabel').toUpperCase()}</Text>
                            <TextInput
                                testID="lyntty-server-url-input"
                                accessibilityLabel={t('appWide.lynttyServerUrl')}
                                style={[
                                    styles.textInput,
                                    isValidating && styles.textInputValidating
                                ]}
                                value={inputUrl}
...
                                            onPress={handleReset}
                                        />
                                    </View>
                                )}
                                <View style={styles.buttonWrapper}>
                                    <RoundButton
                                        testID="lyntty-server-save"
                                        title={isValidating ? t('server.validating') : t('common.save')}
                                        size="normal"
                                        action={handleSave}
                                        disabled={isValidating}
                                    />
                                </View>
...
