...
                                router.push('/restore');
                            }}
                        />
                    </View>
                    <View style={styles.buttonContainerSecondary}>
                        <RoundButton
                            testID="lyntty-create-account"
                            size="normal"
                            title={t('welcome.createAccount')}
                            action={createAccount}
                            display="inverted"
                        />
                    </View>
...
